# mwcc-rs

./: .gitignore  Cargo.toml  README.md
apps/mwcc/: Cargo.toml
apps/mwcc/src/: cxx_analysis_residues.rs  cxx_rtti_names.rs  function_order.rs  global_initializers.rs  inline_ordinal_positions.rs  main.rs  reference_analysis.rs
apps/mwcc/src/tests/: aggregate_member_copy.rs  bit_reverse_loop.rs  bitfield_conditions.rs  call_argument_schedules.rs  call_indexed_member.rs  call_live_counter_loop.rs  extern_unsized_array.rs  float_conditions.rs  float_fused_triplet.rs  grab_mash.rs  inline_member_zero_fill.rs  inlined_short_circuit_call_loop.rs  saved_float_initializer.rs  structured_7400_schedules.rs  xnor_feedback_loop.rs
crates/pipeline/mwcc-syntax-trees-to-debug-info/: Cargo.toml
crates/pipeline/mwcc-syntax-trees-to-debug-info/assets/: animal_crossing_cardnet_gc_1_2_5n.mwdc  animal_crossing_cpluslibppc_gc_1_3_2.mwdc  animal_crossing_ef_kigae_gafe_gc_1_3_2.mwdc  animal_crossing_ef_kigae_gc_1_3_2.mwdc  animal_crossing_file_pos_gc_1_3.mwdc  animal_crossing_nubevent_gc_1_3.mwdc  animal_crossing_s_floor_gc_1_3.mwdc  ocarina_fstload_gc_1_2_5n.mwdc  runtime_init_ac_gc_1_2_5n.mwdc  runtime_init_strikers_gc_1_2_5n.mwdc  runtime_init_tp_gc_1_2_5n.mwdc  runtime_init_tp_gc_3_0a3.mwdc  runtime_init_tp_wii_1_0.mwdc  runtime_init_tp_wii_1_0_o0.mwdc
crates/pipeline/mwcc-syntax-trees-to-debug-info/src/: fragmented.rs  legacy.rs  lib.rs  source_view.rs
crates/pipeline/mwcc-syntax-trees-to-debug-info/src/legacy/: captures.rs  classes.rs  data.rs  enumerations.rs  functions.rs  simple_void_functions.rs  vector_installers.rs
crates/pipeline/mwcc-syntax-trees-to-machine-code/: Cargo.toml
crates/pipeline/mwcc-syntax-trees-to-machine-code/src/: analysis.rs  arithmetic.rs  asm.rs  body.rs  casts.rs  comparisons.rs  condition_float_cache.rs  condition_global_cache.rs  control_flow.rs  copy_convention.rs  cxx_abi.rs  dag_emitter.rs  division.rs  expressions.rs  float_abs_pair_condition.rs  float_abs_select.rs  float_compare_schedules.rs  float_computed_loaded_condition.rs  float_dag.rs  float_fused_triplet.rs  float_negated_product.rs  float_product_condition.rs  floats.rs  frame.rs  frexp_family.rs  generator.rs  inline_expansion.rs  inline_summaries.rs  legacy_comparisons.rs  legacy_dual_float_condition.rs  lib.rs  narrow.rs  operands.rs  ordinal_accounting.rs  placement.rs  switch.rs  symbol_order.rs  value_tracking.rs
crates/pipeline/mwcc-syntax-trees-to-machine-code/src/asm/: encode.rs  frame.rs  mod.rs  operands.rs
crates/pipeline/mwcc-syntax-trees-to-machine-code/src/body/: aggregate_return_temporaries.rs  ascii_pointer_compare.rs  assertion_expression.rs  bounded_acceleration_schedule.rs  bounded_member_cursor.rs  cached_member_guard.rs  call_prologue.rs  callee_saved.rs  comma_operator.rs  condition_linkage.rs  conditional.rs  conditional_float_call_arguments.rs  conditional_float_requantize.rs  conditional_friction_select.rs  conditional_member_copy.rs  conditional_member_select_tail.rs  control_block_unique_copy.rs  cxx_global_startup.rs  dispatchers.rs  driver.rs  endian_stack_pack.rs  endian_stack_unpack.rs  enum_remap_member_update.rs  expression_statement.rs  fixed_address_object_flush.rs  fixed_port_bitfield.rs  fixed_port_indexed_bitfield.rs  fixed_port_replay_update.rs  float_friction_select.rs  float_store_fill.rs  frame_vector_accumulation_schedule.rs  friction_limited_acceleration_clamp.rs  global_struct_member_search.rs  grab_mash_schedule.rs  ground_knockback_projection_schedule.rs  guarded_aggregate_update.rs  guarded_global_callback.rs  guarded_member_decrement_if_else.rs  guards_ifs.rs  if_else.rs  (+66 more)
crates/pipeline/mwcc-syntax-trees-to-machine-code/src/captures/: abex_abort.rs  abex_exit.rs  abexb_abort.rs  abexb_exit.rs  abexm_exit.rs  abexp2_exit.rs  abexpik_exit.rs  abexs_exit.rs  acf_ctz.rs  acf_ctzl.rs  acf_dec2num.rs  acf_dorounddecup.rs  acf_must_round.rs  acf_num2dec.rs  acf_num2dec_i.rs  acf_rounddec.rs  acf_str2dec.rs  acf_timesdec.rs  acf_two_exp.rs  acf_ull2dec.rs  ack_kigae_mv.rs  ack_kigae_mv_gafe.rs  afp_ctzl.rs  afp_dec2num_pik.rs  afp_num2dec.rs  afp_num2dec_i.rs  afp_num2dec_mel.rs  afp_num2dec_pik.rs  afp_str2dec.rs  afp_timesdec.rs  afp_two_exp.rs  afp_ull2dec.rs  alm_block_link.rs  alm_dealloc_fixed.rs  alm_dealloc_var.rs  alm_free.rs  alm_get_malloc_pool.rs  alm_merge_next.rs  alm_merge_prev.rs  alm_pool_free.rs  (+509 more)
crates/pipeline/mwcc-syntax-trees-to-machine-code/src/control_flow/: absolute_value.rs  branch_preserving_select.rs  branches.rs  common_offset_select.rs  float.rs  memory_select.rs  mod.rs  narrow_member_compare.rs  negated_short_circuit.rs  nested_phi_select.rs  passes.rs  record_condition.rs  record_mask.rs  select.rs
crates/pipeline/mwcc-syntax-trees-to-machine-code/src/cxx_abi/: adjustor_thunks.rs  optional_destructor.rs  trivial_destructor.rs  virtual_destructor.rs
crates/pipeline/mwcc-syntax-trees-to-machine-code/src/expressions/: aggregate_member_copy.rs  arithmetic.rs  biased_scaled_member_sum.rs  bit_field_stores.rs  bit_fields.rs  call_argument_schedules.rs  call_argument_types.rs  call_indexed_member.rs  calls.rs  constructed_new.rs  constructor_initializers.rs  driver.rs  global_array_decay.rs  global_array_index.rs  globals.rs  implicit_narrow_store.rs  indexed_rmw.rs  members.rs  mod.rs  narrow_compound.rs  operands.rs  passes.rs  pointer_alignment.rs  pointer_spans.rs  pointers.rs  punned_displacement.rs  shifted_member_mask.rs  stores.rs  strings.rs  xnor_feedback_update.rs
crates/pipeline/mwcc-syntax-trees-to-machine-code/src/float/: core.rs  diamond_dual.rs  mod.rs  punned.rs
crates/pipeline/mwcc-syntax-trees-to-machine-code/src/inline_expansion/: call_sites.rs  frame_residue.rs  returns.rs  (+5 more)
crates/pipeline/mwcc-tokens-to-syntax-trees/: Cargo.toml
crates/pipeline/mwcc-tokens-to-syntax-trees/src/: aggregate_size_assertions.rs  cxx.rs  cxx_analysis_facts.rs  cxx_new.rs  cxx_rtti.rs  explicit_instantiations.rs  expressions.rs  inline_body_analysis.rs  items.rs  lib.rs  lvalues.rs  parameter_names.rs  parser.rs
(+1831 files in other folders)
