[workspace]
resolver = "2"
members = [
    # foundation — shared vocabulary, no pipeline logic
    "crates/foundation/mwcc-core",
    "crates/foundation/mwcc-target",
    "crates/foundation/mwcc-versions",
    "crates/foundation/mwcc-object",
    "crates/foundation/mwcc-dwarf1",

    # representations — the data each phase produces (nouns)
    "crates/representations/mwcc-tokens",
    "crates/representations/mwcc-syntax-trees",
    "crates/representations/mwcc-machine-code",
    "crates/representations/mwcc-vreg",

    # pipeline — the transforms between representations (named input-to-output)
    "crates/pipeline/mwcc-source-to-tokens",
    "crates/pipeline/mwcc-tokens-to-syntax-trees",
    "crates/pipeline/mwcc-syntax-trees-to-machine-code",
    "crates/pipeline/mwcc-machine-code-to-object",
    "crates/pipeline/mwcc-syntax-trees-to-debug-info",

    # binaries
    "apps/mwcc",
    "harness/mwcc-oracle",
    "harness/mwcc-detect",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = ""

[workspace.dependencies]
mwcc-core = { path = "crates/foundation/mwcc-core" }
mwcc-target = { path = "crates/foundation/mwcc-target" }
mwcc-versions = { path = "crates/foundation/mwcc-versions" }
mwcc-object = { path = "crates/foundation/mwcc-object" }
mwcc-dwarf1 = { path = "crates/foundation/mwcc-dwarf1" }
mwcc-tokens = { path = "crates/representations/mwcc-tokens" }
mwcc-syntax-trees = { path = "crates/representations/mwcc-syntax-trees" }
mwcc-machine-code = { path = "crates/representations/mwcc-machine-code" }
mwcc-vreg = { path = "crates/representations/mwcc-vreg" }
mwcc-source-to-tokens = { path = "crates/pipeline/mwcc-source-to-tokens" }
mwcc-tokens-to-syntax-trees = { path = "crates/pipeline/mwcc-tokens-to-syntax-trees" }
mwcc-syntax-trees-to-machine-code = { path = "crates/pipeline/mwcc-syntax-trees-to-machine-code" }
mwcc-machine-code-to-object = { path = "crates/pipeline/mwcc-machine-code-to-object" }
mwcc-syntax-trees-to-debug-info = { path = "crates/pipeline/mwcc-syntax-trees-to-debug-info" }

[profile.release]
opt-level = 3
