[package]
name = "mwcc-tokens-to-syntax-trees"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mwcc-core.workspace = true
mwcc-tokens.workspace = true
mwcc-syntax-trees.workspace = true

[dev-dependencies]
mwcc-source-to-tokens.workspace = true

[lints.rust]
unsafe_code = "forbid"
